# src/main/java/com/ledgerops/customer/api/CustomerActivityStatus.java
@@ -1,0 +1,7 @@
+package com.ledgerops.customer.api;
+
+public enum CustomerActivityStatus {
+    ALLOWED,
+    INACTIVE,
+    NOT_FOUND
+}
