# src/main/java/com/ledgerops/merchant/api/MerchantActivityQuery.java
@@ -1,0 +1,6 @@
+package com.ledgerops.merchant.api;
+
+public interface MerchantActivityQuery {
+
+    MerchantActivityStatus evaluate(MerchantReference merchantReference);
+}
