# src/main/java/com/ledgerops/merchant/api/MerchantActivityStatus.java
@@ -1,0 +1,7 @@
+package com.ledgerops.merchant.api;
+
+public enum MerchantActivityStatus {
+    ALLOWED,
+    INACTIVE,
+    NOT_FOUND
+}
