# src/main/java/com/ledgerops/tenancy/api/TenantActivityStatus.java
@@ -1,0 +1,7 @@
+package com.ledgerops.tenancy.api;
+
+public enum TenantActivityStatus {
+    ALLOWED,
+    INACTIVE,
+    NOT_FOUND
+}
